@@ -13,6 +13,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/orders")
@@ -45,6 +46,7 @@ public class OrdersController {
             OrderHistoryResponse orderHistoryResponse = new OrderHistoryResponse();
             BeanUtils.copyProperties(orderHistory, orderHistoryResponse);
             return orderHistoryResponse;
-        }).toList();
+        }).collect(Collectors.toList());
     }
+
 }
